--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,25 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
-    "@149311cb/black": "1.0.1",
+    "@honeybadger-io/js": "^3.2.4",
+    "@honeybadger-io/react": "^1.0.2",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.0",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass-loader": "^11.1.1",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
