--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.ts",
   "author": "Nick",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "mongoose": "^5.13.5",
     "nodemon": "^2.0.12",
-    "stripe": "^8.174.0"
+    "stripe": "^8.174.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "tsc -w & nodemon dist/server.js"
   }
 }
