--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,9 @@
   "name": "golf-company",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.3.3",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.17.1",
     "@testing-library/jest-dom": "^5.11.4",
