--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.23.0",
+    "prettier": "^2.4.1"
   }
 }
