--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "golf-company",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@paypal/react-paypal-js": "^7.3.3",
     "@stripe/react-stripe-js": "^1.4.1",
@@ -15,13 +15,15 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
-    "node-sass": "^6.0.1",
+    "@types/uuid": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.44.0",
     "sass-loader": "^11.1.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.5.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
