--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ web_modules/
 # dotenv environment variables file
 .env
 .env.test
+localhost*
+message.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
