--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "golf-company",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5001",
+  "proxy": "https://localhost:5001",
   "dependencies": {
     "@paypal/react-paypal-js": "^7.3.3",
     "@stripe/react-stripe-js": "^1.4.1",
