--- a/admin/package.json
+++ b/admin/package.json
@@ -8,6 +8,8 @@
     "@emotion/styled": "^11.6.0",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/react": "^3.1.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
