--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,6 @@
   "author": "Nick",
   "license": "MIT",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.5",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
@@ -29,6 +25,10 @@
     "server": "tsc -w & nodemon dist/app.js"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6"
   }
 }
