remove oop decorator and protect(using middleware and builtin ts decorator now) + fix option glitch + add to cart badge + change from iterator to normal array map(client golf options)

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "node server",
-    "server": "tsc -w & nodemon dist/app.js"
+    "server": "tsc -w & nodemon dist/index.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
