--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.ts",
   "author": "Nick",
   "license": "MIT",
   "dependencies": {
@@ -21,8 +21,9 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "start": "node server",
-    "server": "tsc -w & nodemon dist/index.js"
+    "start": "node dist/index.js",
+    "server": "tsc -w & nodemon dist/index.js",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
